2001-04-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 14133: Completion/Base/Completer/_expand,
	Completion/Unix/Type/_path_files, Doc/Zsh/compsys.yo: try to
	improve testing for suffix style in _expand; make _path_files
	fail to complete words like ...<pat>..<param-subst>...

2001-04-26  Bart Schaefer  <schaefer@zsh.org>

	* 14129: Completion/Base/Completer/_approximate: Use a trap to
	unfunction the `compadd' function so that it can be correctly
	removed in the event that the competion system is interrupted by
	a keyboard signal.

2001-04-26  Clint Adams  <clint@zsh.org>

        * 14125: Src/Modules/termcap.c, Src/Modules/terminfo.c:
	remove static incleanup flag since it is not used.

        * 14123: acconfig.h, configure.in, Src/Modules/termcap.c:
	don't include curses.h in termcap.c if term.h doesn't need it.

2001-04-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 14117: Completion/Base/Utility/_arguments, Doc/Zsh/compsys.yo:
	tweak to make single-letter options only be completed after an
	option with an argument if the -W option is given

2001-04-26  Bart Schaefer  <schaefer@zsh.org>

	* 14108: Src/Modules/termcap.c: Don't define USES_TERM* if the
	corresponding HAVE_TERM* constants are not defined.

2001-04-26  Oliver Kiddle  <opk@zsh.org>

	* 14112: Completion/Base/Utility/.distfiles,
	Completion/Unix/Command/_pine, Completion/X/Command/.distfiles,
	Completion/X/Command/_vnc: new _vnc and use of new _guard in _pine

2001-04-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 14107: Completion/compaudit, Completion/compinstall,
	Doc/Zsh/compsys.yo: handle sub-sub-directories of $_compdir as
	in the CVS-layout

	* 14105: Completion/Base/Utility/_arguments,
	Completion/Base/Utility/_guard,
	Completion/X/Utility/_x_arguments,
	Completion/X/Utility/_xt_arguments, Doc/Zsh/compsys.yo,
	Src/Zle/computil.c: rename -W option to -w, add new -W option
	which makes _arguments complete options even after options that
	get their argument in the same word; new _guard function for